# src/controllers/auth.controller.ts
@@ -27,8 +27,20 @@ const registerValidateSchema = Yup.object({
     fullname: Yup.string().required(),
     username: Yup.string().min(5, "Username minimal harus 5 karakter").required(),
     email: Yup.string().email("Email tidak valid").required(),
-    password: Yup.string().min(8, "Password minimal harus 8 karakter").required(),
-    confirmPassword: Yup.string().oneOf([Yup.ref('password')], "Password tidak sama").required()
+    password: Yup.string()
+        .min(8, "Password minimal harus 8 karakter")
+        .required()
+        .test('at-least-one-uppercase-letter', "Password harus memiliki 1 atau lebih huruf besar", (value) => {
+            if(!value) return false;
+            const regex = /^(?=.*[A-Z])/;
+            return regex.test(value);
+        })
+        .test('at-least-one-number', "Password harus memiliki 1 atau lebih angka", (value) => {
+            if(!value) return false;
+            const regex = /^(?=.*\d)/;
+            return regex.test(value);
+        }),
+    confirmPassword: Yup.string().oneOf([Yup.ref("password"), "" ], "Password tidak sama")
 });
 
 export default {
@@ -62,19 +74,29 @@ export default {
 
         try {
             // Ambil data user berdasarkan Identifier -> (email dan username)
+            
             const userByIdentifier = await UserModel.findOne({
                 $or: [
                     { username: identifier },
                     { email: identifier }
-                ]
-            })
+                ],
+                isActive: true
+            });
             // Validasi identifier user
             if (!userByIdentifier) {
                 return res.status(400).json({
                     message: "User tidak ditemukan",
                     data: null
                 });
-            }
+            };
+
+            // Validasi status user
+            if (!userByIdentifier.isActive) {
+                return res.status(400).json({
+                    message: "User belum diaktifkan",
+                    data: null
+                });
+            };
 
             // Validasi password
             const validatePassword: Boolean = encrypt(password) === userByIdentifier.password;
@@ -123,4 +145,40 @@ export default {
             res.status(400).json({ message: err.message, data: null });
         }
     },
+
+    async activation(req: Request, res: Response) {
+        /**
+        #swagger.tags = ['Auth']
+        #swagger.requestBody = {
+            required: true,
+            schema: {
+                $ref: '#/components/schemas/ActivationRequest'
+            }
+        }
+         */
+        try {
+            const { code } = req.body as {code: string};
+
+            const user = await UserModel.findOneAndUpdate(
+                { 
+                    activationCode: code 
+                },
+                { 
+                    isActive: true 
+                },
+                { 
+                    new: true 
+                }
+            );
+
+            res.status(200).json({
+                message: "User successfully activated",
+                data: user
+            });
+
+        } catch (error) {
+            const err = error as unknown as Error
+            res.status(400).json({ message: err.message, data: null });
+        }
+    }
 };
